iss#186 Processing: API for historical processing: repository method findAllOrderedByUpdateDateTime with tests